--- a/static/index.html
+++ b/static/index.html
@@ -1,163 +1,186 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>ircstore</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font: 14px monospace; background: #1e1e1e; color: #d4d4d4; }
-        #app { display: flex; height: 100vh; }
-        #channels { width: 200px; background: #252526; border-right: 1px solid #3e3e42; overflow-y: auto; }
-        #channels h3 { padding: 10px; background: #2d2d30; border-bottom: 1px solid #3e3e42; }
-        .channel { padding: 8px 15px; cursor: pointer; }
-        .channel:hover { background: #2d2d30; }
-        .channel.active { background: #094771; color: #fff; }
-        #logs { flex: 1; display: flex; flex-direction: column; }
-        #header { padding: 10px; background: #2d2d30; border-bottom: 1px solid #3e3e42; display: flex; justify-content: space-between; align-items: center; }
-        #messages { flex: 1; overflow-y: auto; padding: 10px; }
-        .message { margin-bottom: 5px; }
-        .time { color: #858585; }
-        .nick { color: #4ec9b0; }
-        .text { color: #d4d4d4; }
-        .status { background: #007acc; color: #fff; padding: 5px 10px; border-radius: 3px; }
-        .status.connected { background: #608b4e; }
-        .status.error { background: #f48771; }
-        #header a { color: #4ec9b0; text-decoration: none; margin-left: 10px; }
-        #header a:hover { text-decoration: underline; }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font: 14px monospace; background: #1e1e1e; color: #d4d4d4; }
+    #app { display: flex; height: 100vh; }
+    #channels { width: 200px; background: #252526; border-right: 1px solid #3e3e42; overflow-y: auto; }
+    #channels h3 { padding: 10px; background: #2d2d30; border-bottom: 1px solid #3e3e42; }
+    .channel { padding: 8px 15px; cursor: pointer; }
+    .channel:hover { background: #2d2d30; }
+    .channel.active { background: #094771; color: #fff; }
+    #logs { flex: 1; display: flex; flex-direction: column; }
+    #header { padding: 10px; background: #2d2d30; border-bottom: 1px solid #3e3e42; display: flex; justify-content: space-between; align-items: center; }
+    #messages { flex: 1; overflow-y: auto; padding: 10px; }
+    .message { margin-bottom: 5px; }
+    .time { color: #858585; }
+    .nick { color: #4ec9b0; }
+    .text { color: #d4d4d4; }
+    .status { background: #007acc; color: #fff; padding: 5px 10px; border-radius: 3px; }
+    .status.connected { background: #608b4e; }
+    .status.error { background: #f48771; }
+    #header a { color: #4ec9b0; text-decoration: none; margin-left: 10px; }
+    #header a:hover { text-decoration: underline; }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-        <div id="channels">
-            <h3>Channels</h3>
-            <div id="channel-list"></div>
+      <div id="channels">
+        <h3>Channels</h3>
+        <div id="channel-list"></div>
+      </div>
+      <div id="logs">
+        <div id="header">
+          <span id="current-channel">Select a channel</span>
+          <div>
+            <a href="/help">API Help</a>
+            <span id="status" class="status">Connecting...</span>
+          </div>
         </div>
-        <div id="logs">
-            <div id="header">
-                <span id="current-channel">Select a channel</span>
-                <div>
-                    <a href="/help">API Help</a>
-                    <span id="status" class="status">Connecting...</span>
-                </div>
-            </div>
-            <div id="messages"></div>
-        </div>
+        <div id="messages"></div>
+      </div>
     </div>
     <script>
-        let ws = null;
-        let currentChannel = null;
+    let ws = null;
+    let currentChannel = null;
 
-        async function loadChannels() {
-            try {
-                const res = await fetch('/api/channels');
-                const channels = await res.json();
-                const list = document.getElementById('channel-list');
+    async function loadChannels() {
+      try {
+        const res = await fetch('/api/channels');
+        const channels = await res.json();
+        const list = document.getElementById('channel-list');
 
-                if (channels.length === 0) {
-                    list.innerHTML = '<div style="padding: 10px; color: #858585;">No channels yet</div>';
-                    return;
-                }
+        if (channels.length === 0) {
+          list.innerHTML = '<div style="padding: 10px; color: #858585;">No channels yet</div>';
+          return;
+        }
 
-                list.innerHTML = channels.map(ch =>
-                    `<div class="channel ${ch === currentChannel ? 'active' : ''}" data-channel="${ch}">${ch}</div>`
-                ).join('');
+        list.innerHTML = channels.map(ch =>
+          `<div class="channel ${ch === currentChannel ? 'active' : ''}" data-channel="${ch}">${ch}</div>`
+        ).join('');
 
-                list.querySelectorAll('.channel').forEach(el => {
-                    el.addEventListener('click', () => selectChannel(el.dataset.channel));
-                });
+        list.querySelectorAll('.channel').forEach(el => {
+          el.addEventListener('click', () => selectChannel(el.dataset.channel));
+        });
 
-                if (!currentChannel && channels.length > 0) {
-                    selectChannel(channels[0]);
-                }
-            } catch (e) {
-                console.error('Failed to load channels:', e);
+        if (!currentChannel && channels.length > 0) {
+          // Check URL hash for channel
+          const hash = window.location.hash.slice(1);
+          if (hash) {
+            const targetChannel = hash.startsWith('%23') ? decodeURIComponent(hash) : '#' + hash;
+            if (channels.includes(targetChannel)) {
+              selectChannel(targetChannel);
+              return;
             }
+          }
+          selectChannel(channels[0]);
+        }
+      } catch (e) {
+        console.error('Failed to load channels:', e);
+      }
+    }
+
+    async function selectChannel(channel) {
+      // Verify channel exists
+      const channels = Array.from(document.querySelectorAll('.channel')).map(el => el.dataset.channel);
+      if (!channels.includes(channel)) return;
+
+      currentChannel = channel;
+      window.location.hash = channel.replace('#', '');
+      document.getElementById('current-channel').textContent = channel;
+      document.querySelectorAll('.channel').forEach(el => {
+        el.classList.toggle('active', el.dataset.channel === channel);
+      });
+      await loadLogs();
+    }
+
+    async function loadLogs() {
+      if (!currentChannel) return;
+
+      try {
+        const res = await fetch(`/api/logs/${encodeURIComponent(currentChannel)}?limit=100`);
+        const logs = await res.json();
+        const messages = document.getElementById('messages');
+        messages.innerHTML = logs.map(formatMessage).join('');
+        messages.scrollTop = messages.scrollHeight;
+      } catch (e) {
+        console.error('Failed to load logs:', e);
+        document.getElementById('messages').innerHTML = '<div style="padding: 10px; color: #f48771;">Failed to load logs</div>';
+      }
+    }
+
+    function formatMessage(msg) {
+      const time = new Date(msg.timestamp * 1000).toLocaleTimeString();
+      return `<div class="message">
+<span class="time">[${time}]</span>
+<span class="nick">${msg.nick || '*'}:</span>
+<span class="text">${escapeHtml(msg.message)}</span>
+</div>`;
+    }
+
+    function escapeHtml(text) {
+      const div = document.createElement('div');
+      div.textContent = text;
+      return div.innerHTML;
+    }
+
+    function connectWS() {
+      const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+      ws = new WebSocket(`${protocol}//${window.location.host}/ws`);
+
+      ws.onopen = () => {
+        console.log('WebSocket connected');
+        document.getElementById('status').textContent = 'Connected';
+        document.getElementById('status').className = 'status connected';
+      };
+
+      ws.onmessage = (e) => {
+        console.log('WebSocket message:', e.data);
+        const msg = JSON.parse(e.data);
+
+        // Reload channels if new channel appears
+        if (!document.querySelector(`[data-channel="${msg.channel}"]`)) {
+          loadChannels();
         }
 
-        async function selectChannel(channel) {
-            currentChannel = channel;
-            document.getElementById('current-channel').textContent = channel;
-            document.querySelectorAll('.channel').forEach(el => {
-                el.classList.toggle('active', el.dataset.channel === channel);
-            });
-            await loadLogs();
+        // Append message if viewing this channel
+        if (msg.channel === currentChannel) {
+          const messages = document.getElementById('messages');
+          const msgHtml = formatMessage(msg);
+          messages.insertAdjacentHTML('beforeend', msgHtml);
+          messages.scrollTop = messages.scrollHeight;
         }
+      };
 
-        async function loadLogs() {
-            if (!currentChannel) return;
+      ws.onerror = (e) => {
+        console.error('WebSocket error:', e);
+        document.getElementById('status').textContent = 'Error';
+        document.getElementById('status').className = 'status error';
+      };
 
-            try {
-                const res = await fetch(`/api/logs/${encodeURIComponent(currentChannel)}?limit=100`);
-                const logs = await res.json();
-                const messages = document.getElementById('messages');
-                messages.innerHTML = logs.map(formatMessage).join('');
-                messages.scrollTop = messages.scrollHeight;
-            } catch (e) {
-                console.error('Failed to load logs:', e);
-                document.getElementById('messages').innerHTML = '<div style="padding: 10px; color: #f48771;">Failed to load logs</div>';
-            }
-        }
+      ws.onclose = () => {
+        console.log('WebSocket closed');
+        document.getElementById('status').textContent = 'Disconnected';
+        document.getElementById('status').className = 'status error';
+        setTimeout(connectWS, 3000);
+      };
+    }
 
-        function formatMessage(msg) {
-            const time = new Date(msg.timestamp * 1000).toLocaleTimeString();
-            return `<div class="message">
-                <span class="time">[${time}]</span>
-                <span class="nick">${msg.nick || '*'}:</span>
-                <span class="text">${escapeHtml(msg.message)}</span>
-            </div>`;
-        }
+    // Handle hash changes
+    window.addEventListener('hashchange', async () => {
+      const hash = window.location.hash.slice(1);
+      if (hash) {
+        const targetChannel = hash.startsWith('%23') ? decodeURIComponent(hash) : '#' + hash;
+        selectChannel(targetChannel);
+      }
+    });
 
-        function escapeHtml(text) {
-            const div = document.createElement('div');
-            div.textContent = text;
-            return div.innerHTML;
-        }
-
-        function connectWS() {
-            const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
-            ws = new WebSocket(`${protocol}//${window.location.host}/ws`);
-
-            ws.onopen = () => {
-                console.log('WebSocket connected');
-                document.getElementById('status').textContent = 'Connected';
-                document.getElementById('status').className = 'status connected';
-            };
-
-            ws.onmessage = (e) => {
-                console.log('WebSocket message:', e.data);
-                const msg = JSON.parse(e.data);
-                
-                // Reload channels if new channel appears
-                if (!document.querySelector(`[data-channel="${msg.channel}"]`)) {
-                    loadChannels();
-                }
-                
-                // Append message if viewing this channel
-                if (msg.channel === currentChannel) {
-                    const messages = document.getElementById('messages');
-                    const msgHtml = formatMessage(msg);
-                    messages.insertAdjacentHTML('beforeend', msgHtml);
-                    messages.scrollTop = messages.scrollHeight;
-                }
-            };
-
-            ws.onerror = (e) => {
-                console.error('WebSocket error:', e);
-                document.getElementById('status').textContent = 'Error';
-                document.getElementById('status').className = 'status error';
-            };
-
-            ws.onclose = () => {
-                console.log('WebSocket closed');
-                document.getElementById('status').textContent = 'Disconnected';
-                document.getElementById('status').className = 'status error';
-                setTimeout(connectWS, 3000);
-            };
-        }
-
-        // Initial load
-        loadChannels();
-        setInterval(loadChannels, 10000); // Refresh channel list every 10 seconds
-        connectWS();
+    // Initial load
+    loadChannels();
+    setInterval(loadChannels, 10000); // Refresh channel list every 10 seconds
+    connectWS();
     </script>
-</body>
+  </body>
 </html>
